MASTER: Refactoring
