# platform-web-application/src/main/java/ee/himaster/platform/web/application/controller/CategoryController.java
@@ -1,14 +1,10 @@
 package ee.himaster.platform.web.application.controller;
 
-import ee.himaster.core.service.converter.impl.BasicConverter;
 import ee.himaster.platform.api.controller.CategoryApi;
 import ee.himaster.platform.dto.CategoryDto;
-import ee.himaster.platform.services.model.CategoryModel;
-import ee.himaster.platform.services.service.CategoryService;
+import ee.himaster.platform.facades.facade.CategoryFacade;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
-import org.apache.commons.collections4.CollectionUtils;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -19,21 +15,15 @@ import org.springframework.web.context.annotation.RequestScope;
 @Controller
 @RequestScope
 public class CategoryController implements CategoryApi {
-    private final CategoryService categoryService;
-    private final BasicConverter<CategoryDto, CategoryModel> categoryConverter;
+    private final CategoryFacade categoryFacade;
 
     @Override
-    public ResponseEntity<List<CategoryDto>> getAll() {
-        final List<CategoryDto> categories = CollectionUtils.emptyIfNull(categoryService.getAllCategories())
-                .stream()
-                .map(categoryConverter::convert)
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(categories);
+    public ResponseEntity<List<CategoryDto>> getRootsCategories() {
+        return ResponseEntity.ok(categoryFacade.getRootCategories());
     }
 
     @Override
     public ResponseEntity<CategoryDto> getById(Integer categoryId) {
-        final CategoryDto category = categoryConverter.convert(categoryService.getCategoryById(categoryId));
-        return ResponseEntity.ok(category);
+        return ResponseEntity.ok(categoryFacade.getById(categoryId));
     }
 }
